Fixed word wrapping issue

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -111,7 +111,7 @@ article.submission
   margin-top: 20px
 
   p
-    white-space: pre
+    white-space: pre-wrap
 
 span.rating a
   @extend .badge
